# studio1

./: .gitignore  package-lock.json  package.json
docs/: blueprint.md
prisma/: schema.prisma  seed.ts
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
src/ai/: dev.ts
src/ai/flows/: recommend-courses.ts  suggest-blog-title.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/ai-tools/: page.tsx
src/app/ai-tools/title-suggester/: page.tsx
src/app/blog/: page.tsx
src/app/blog/[slug]/: page.tsx
src/app/courses/: page.tsx
src/app/courses/[courseId]/: page.tsx
src/app/forgot-password/: page.tsx
src/app/leaderboard/: page.tsx
src/app/life-tracker/: page.tsx
src/app/login/: page.tsx
src/app/portfolio/: page.tsx
src/app/portfolio/[projectId]/: page.tsx
src/app/profile/: page.tsx
src/app/signup/: page.tsx
src/components/features/: CourseRecommendations.tsx  LifeTracker.tsx  TitleSuggestionTool.tsx
src/components/layout/: Footer.tsx  Navbar.tsx
src/lib/: prisma.ts
src/types/: index.ts
